--- a/src/main/resources/fxmls/visuals/Fov.fxml
+++ b/src/main/resources/fxmls/visuals/Fov.fxml
@@ -17,7 +17,7 @@
         </Label>
     </Pane>
    <CheckBox fx:id="enabled" layoutX="14.0" layoutY="57.0" mnemonicParsing="false" onAction="#onAction" prefHeight="27.0" prefWidth="79.0" text="Enabled" />
-   <TextField fx:id="fov" layoutX="14.0" layoutY="116.0" onKeyTyped="#onAction" prefHeight="25.0" prefWidth="115.0" />
+   <TextField fx:id="fovField" layoutX="14.0" layoutY="116.0" onKeyTyped="#onAction" prefHeight="25.0" prefWidth="115.0" />
    <Label layoutX="14.0" layoutY="89.0" prefHeight="27.0" prefWidth="108.0" text="Fov" textFill="#e7e5e5">
       <font>
          <Font name="System Bold" size="18.0" />
